style.css
* {
    margin: 0;
    padding: 0;
    font-family: Helvetica, sans-serif;
}

.container {
    display: grid;
    grid-template-columns: 1fr 7fr;
}

.sidebar {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    display: grid;
    row-gap: 50px;
    padding: 25px 50px 25px 25px;
    background-color: rgb(25 146 212);
    align-content: flex-start;
}

.header {
    grid-column: 2 / 3 ;
    display: flex;
    gap: 20px;
    flex-flow: column;
    background-color: white;
    padding-left: 50px;
    padding-bottom: 25px;
    padding-top: 25px;
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
    z-index: 1;
}

.header-top-row {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 100px;
}

.header-top-row input {
    outline: none;
    width: 500px;
    height: 15px;
    background-color: rgb(202, 215, 223);
    border-color: rgba(201, 201, 201, 0);
    border-radius: 50px;
    padding: 10px;

}

.header-top-row .right-side, 
.header-top-row .left-side{
    display: flex;
    align-items: center;
}


.header-top-row .right-side {
    gap: 25px;
    margin-right: 100px;
    flex-shrink: 0;
}

.header-top-row .left-side {
    gap: 25px;
}

.header-bottom-row {
    display: flex;
    align-items: center;
    gap: 25px;
    justify-content: space-between;

}

.header-bottom-row button{
    padding: 12px 32px;
    border: 0;
    border-radius: 50px;
    background-color: rgb(43, 174, 235);
    color: white;
    font-weight: 700;
}

.buttons {
    display: flex;
    gap: 25px;
    margin-right: 100px;
}

.header-bottom-row .left-side {
    display: flex;
    align-items: center;
    gap: 25px;
}

.large-profile-picture {
    width: 75px;
    height: 75px;
    border-radius: 50px;
    object-fit: cover;
}

.small-profile-picture {
    width: 50px;
    height: 50px;
    border-radius: 50px;
    object-fit: cover;
}

.main-content {
    grid-column: 2 / 3;
    display: grid;
    justify-content: center;
    padding: 50px 0px 50px 25px;
    row-gap: 15px;
    column-gap: 30px;
    grid-template-columns: min-content 300px;
    background-color: #e2e8f0;
}

.announcement-label, 
.trending-label,
.projects-label {
    font-size: 18px;
    font-weight: 700;
}

.announcement-label {
    grid-column: 2 / 3;
    grid-row: 1;
}

.announcements {
    display: flex;
    flex-flow: column;
    gap: 10px;
    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
    padding: 30px;
    border-radius: 10px;
    margin-bottom: 20px;
    background-color: white;
}

.announcement-card {
    font-size: 12px;
}

.announcement-card:nth-child(2) {
    border-top: 1px solid gray;
    border-bottom: 1px solid gray;
    padding: 10px 0px;
}


.project-cards {
    grid-column: 1 / 1;
    display: grid;
    grid-template: repeat(3, 200px) / repeat(2, 400px);
    gap: 30px;
}

.project-card {
    display: grid;
    grid-template-columns: 8px 1fr;
    grid-template-rows: 1fr 64px;
    background-color: white;
    border-radius: 10px;
    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
    column-gap: 20px;
}

.project-card h1 {
    font-size: 24px;
} 

.project-card p,
.trending-card p:nth-child(2) {
    color: rgb(88, 88, 88);
}

.project-card .text {
    padding-top: 10px;
}

.project-card .text, 
.project-card .icons {
    margin: 20px 20px 20px 0px;
}

.yellow-bar {
    background-color: rgb(240 180 41);
    border-radius: 50px 0px 0px 50px;
    grid-row: 1 / 3;
    height: 100%;
    align-self: center;
    box-sizing: border-box;
}

.project-card .icons {
    justify-self: end;
    display: flex;
    gap: 10px;
}

.main-content-right-side {
    display: grid;
    grid-column: 2 / 2;
    row-gap: 10px;
}

.sidebar-item {
    color: white;
    display: grid;
    grid-template-columns: 1fr 10fr;
    column-gap: 25px;
    align-items: center;
}

.sidebar-group-one,
.sidebar-group-two {
    display: grid;
    row-gap: 25px;
}


.trending {
    display: grid;
    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
    justify-content: start;
    padding: 20px;
    border-radius: 10px;
    gap: 20px;
    background-color: #fff;
}

.trending-card {
    display: flex;
    gap: 20px;
    align-items: center;
    font-size: 14px;
}

.trending-card img{
    width: 50px;
    height: 50px;
    border-radius: 50px;
    object-fit: cover;
}

